examples/test/testpolicy6041.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6041
  namespace: namespace480
spec:
  podSelector:
    matchLabels:
      key38: value36
      key29: value46
      key46: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value25
      podSelector:
        matchLabels:
          key18: value42
